activity_dashboard_mngmnt/static/src/css/style.scss
.activity-dashboard-card {
    border-radius: 0.3rem;
    display: flex;
    justify-content: center;
    padding: 1.7rem 1.5rem 1.5rem 1.5rem;
    margin: 1rem auto;
    height: 100px;
    cursor: pointer;
}
.activity-dashboard-card__icon-container {
    height: 50px;
    width: 50px;
    border-radius: 50%;
}
.my_activity {
  background-color: #229db9;
  border-radius: 10px;
  font-size: 35px;
}
.all_activity{
    background: #88dfdf;
    border-radius: 10px;
    font-size: 35px;
}
.planned_activity {
  background-color: #e8c5ac;
  border-radius: 10px;
  font-size: 35px;
}
.completed_activity{
    background: #a7a1f4;;
    border-radius: 10px;
    font-size: 35px;
}

.today_activity{
    background: #f3bdf4;
    border-radius: 10px;
    font-size: 35px;
}
.overdue_activity {
  background-color: #a2d2fb;
  border-radius: 10px;
  font-size: 35px;
}
.cancelled_activity{
    background: #beeecc;
    border-radius: 10px;
    font-size: 35px;
}
.activity_type {
  background-color: #ecb9b9;;
  border-radius: 10px;
  font-size: 35px;
}
.dashboard_main_section {
  margin: 20px;
}

